Fixed overflow-x

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
     margin-bottom: 30px !important;
     background-color: white !important;
-    padding: 22px 0 0 0 !important;
+    padding: 0px 0 0 0 !important;
     border-radius: 6px !important;
     box-shadow: 0px 2px 92px 0px rgba(0,0,0,0.07) !important;
 }
@@ -31,8 +31,8 @@
     display: flex;
     justify-content: center;
     align-items:center;
-    border-top-left-radius: inherit;
-    border-bottom-left-radius: inherit;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
 
 .header .header_left {
